<resources>
    <string name="app_name">OpenWeather</string>\
    <string name="api_key">27063406787b538a94f3b5e032daf388</string>
    <string name="metric">metric</string>

    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="moderate">Moderate</string>
    <string name="poor">Poor</string>
    <string name="very_poor">Very Poor</string>
    <string name="sunrise">sunrise</string>
    <string name="max_temp">Max temp</string>
    <string name="feels_like">Feels like</string>
    <string name="min_temp">Min temp</string>
    <string name="air_quality">Air Quality</string>
    <string name="perfect">perfect</string>
    <string name="five_days_forecast">Five Days Forecast</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="location">Location</string>
    <string name="updated_at">updated at</string>
    <string name="_24_c">24°C</string>
    <string name="pressure">Pressure</string>
    <string name="sunset">Sunset</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_next_main">Button next main</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="type_your_email">Type your Email</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="todo">TODO</string>
    <string name="hello_welcome">Hello, Welcome!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_via_social_media">Or via social media</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="username">Username</string>
    <string name="type_your_username">Type your Username</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="don_t_have_any_account_signup">Don\'t have any account? SignUp</string>
    <string name="create_account_now">Create account now!</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="weather">Weather</string>
    <string name="forecast_time">forecast time</string>
    <string name="temperature">Temperature</string>
    <string name="ha_noi">Ha Noi</string>
    <string name="i_love_vietnam">i love vietnam</string>
    <string name="viet_nam">viet nam</string>


    <style name="Theme.LoginAndSignUp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
        <!-- Primary brand color. -->
        <item name="colorPrimary">@color/purple_500</item>
        <item name="colorPrimaryVariant">@color/purple_700</item>
        <item name="colorOnPrimary">@color/white</item>
        <!-- Secondary brand color. -->
        <item name="colorSecondary">@color/teal_200</item>
        <item name="colorSecondaryVariant">@color/teal_700</item>
        <item name="colorOnSecondary">@color/black</item>
        <!-- Status bar color. -->
        <!-- Customize your theme here. -->
    </style>

    <style name="LoginTextInputOuterFieldStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_marginTop">15dp</item>
        <item name="android:layout_marginBottom">15dp</item>
    </style>

    <style name="LoginTextInputInnerFieldStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textColorHint">@color/black</item>
        <item name="android:maxLines">1</item>
        <item name="android:textSize">14sp</item>
        <item name="android:singleLine">true</item>
    </style>
</resources>