<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeAuthentication"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="35dp">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/login_to_continue"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_background"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:hint="@string/email"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor,RtlSymmetry" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/password"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_background"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:hint="@string/password"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor,RtlSymmetry" />

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/buttonAuthentication"
                android:text="@string/remember_me"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="InefficientWeight" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:backgroundTint="@color/buttonAuthentication"
            android:fontFamily="sans-serif-black"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_do_not_have_account"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/don_t_have_any_account_signup"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </LinearLayout>
</FrameLayout>