<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeAuthentication"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView

            android:id="@+id/tv_app_name"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="35dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/create_account_now"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name"
            app:layout_constraintStart_toStartOf="@id/tv_app_name"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/tv_create_account"
            app:layout_constraintStart_toStartOf="@id/tv_create_account"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_background"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="8dp"
            android:hint="@string/username"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor,RtlSymmetry"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            app:layout_constraintStart_toStartOf="@id/tv_username"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/et_username"
            app:layout_constraintStart_toStartOf="@id/et_username"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_background"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:hint="@string/email"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor,RtlSymmetry"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:layout_constraintStart_toStartOf="@id/tv_email"/>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintStart_toStartOf="@id/et_email"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_background"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:hint="@string/password"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor,RtlSymmetry"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:layout_constraintStart_toStartOf="@id/tv_password"/>

        <TextView
            android:id="@+id/tv_password_confirm"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/comfirm_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintStart_toStartOf="@id/et_password"/>

        <EditText
            android:id="@+id/et_password_confirm"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_background"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:hint="@string/comfirm_password"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor,RtlSymmetry"
            app:layout_constraintTop_toBottomOf="@id/tv_password_confirm"
            app:layout_constraintStart_toStartOf="@id/tv_password_confirm"/>

        <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/buttonAuthentication"
            android:fontFamily="sans-serif-black"
            android:text="@string/sign_up"
            android:layout_marginTop="36dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password_confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>